--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae omnis, dolores illo modi commodi tempora ea vel praesentium atque. Quaerat sint ducimus perspiciatis eum, tempora dolorem sapiente est? Fugit, voluptatem! <br>
     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut incidunt corrupti, pariatur ea id hic ex consectetur, ratione velit ab deserunt, optio enim placeat dignissimos animi perferendis sint reprehenderit illum?<br>
 </body>
+<script src="scripts.js"></script>
 </html>
