--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <link rel="stylesheet" href="styles.css">
     <title>Andrew DiGeronimo - Home</title>
 </head>
+<nav>
+    <div class="hamburger" onclick="toggleMenu()">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+    </div>
+    <a href="index.html" class="name">Andrew DiGeronimo</a>
+    <ul class="navbar" id="navbar">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+</nav>
 <body>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, repellat molestiae modi dolore necessitatibus reiciendis quos hic natus vero in soluta accusantium odit, ab sit itaque. Similique eum iusto officiis! <br>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae omnis, dolores illo modi commodi tempora ea vel praesentium atque. Quaerat sint ducimus perspiciatis eum, tempora dolorem sapiente est? Fugit, voluptatem! <br>
