--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <div class="navbar">
-        <div class="name">Andrew DiGeronimo</div>
+        <div class="name"><a href="#home">Andrew DiGeronimo</a></div>
         <div class="links">
             <a href="#home">Home</a>
             <a href="#resume">Resume</a>
