--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <header>
+    <div class="square"></div>
     <div class="navbar">
         <div class="name"><a href="#home">Andrew DiGeronimo</a></div>
         <div class="links">
@@ -18,7 +19,66 @@
         </div>
     </div>
 </header>
+<div class = "main_content">
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
+<var>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
 
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
+</div>
 </body>
 <script src="scripts.js"></script>
 </html>
