--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <header>
     <div class="square"></div>
     <div class="navbar">
-        <div class="name"><a href="#home">Andrew DiGeronimo</a></div>
+        <div class="top-nav">
+            <div class="hamburger-menu">&#9776;</div>
+            <div class="name"><a href="#home">Andrew DiGeronimo</a></div>
+        </div>
         <div class="links">
             <a href="#home">Home</a>
             <a href="#resume">Resume</a>
