Nav design updates

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <div class="square"></div>
+    <div class="nav-blur"></div>
     <div class="navbar">
         <div class="top-nav">
             <div class="hamburger-menu">&#9776;</div>
