--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <div class="nav-blur"></div>
     <div class="navbar">
         <div class="top-nav">
-            <div class="hamburger-menu">&#9776;</div>
+            <div class="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <div class="name"><a href="#home">Andrew DiGeronimo</a></div>
         </div>
         <div class="links">
