Light and Dark themes added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css" rel="stylesheet">
     <title>Andrew DiGeronimo - Home</title>
 </head>
 <body>
@@ -86,6 +87,11 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe a
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
 </div>
+<footer>
+    <button id="darkModeToggle" class="btn-dark-mode">
+        <i id="darkModeIcon" class="bi bi-moon"></i>
+    </button>
+</footer>
 </body>
 <script src="scripts.js"></script>
 </html>
