--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sun
     <button id="darkModeToggle" class="btn-dark-mode">
         <i id="darkModeIcon" class="bi bi-moon"></i>
     </button>
+    <div class="footer-content">
+        <p>&copy; Andrew DiGeronimo | Made with ❤️ in NJ</p>
+        <a href="https://github.com/AndrewDiGeronimo" target="_blank" alt="github">
+            <i class="bi bi-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/andrew-digeronimo-44b6b8181/" target="_blank" alt="LinkedIn">
+            <i class="bi bi-linkedin"></i>
+        </a>
+    </div>
 </footer>
 </body>
 <script src="scripts.js"></script>
