Social links / Footer Adjustments

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sun
     <button id="darkModeToggle" class="btn-dark-mode">
         <i id="darkModeIcon" class="bi bi-moon"></i>
     </button>
-    <div class="footer-content">
         <p>&copy; Andrew DiGeronimo | Made with ❤️ in NJ</p>
+        <div class="social-links">
         <a href="https://github.com/AndrewDiGeronimo" target="_blank" alt="github">
             <i class="bi bi-github"></i>
         </a>
