--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             </div>
             <div class="name"><a href="#home">Andrew DiGeronimo</a></div>
         </div>
-        <div class="links">
-            <a href="#home">Home</a>
+        <div class="nav-links">
+            <a href="#home" class="current-page">Home</a>
             <a href="#resume">Resume</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
