--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sun
     <button id="darkModeToggle" class="btn-dark-mode">
         <i id="darkModeIcon" class="bi bi-moon"></i>
     </button>
-        <p>&copy; Andrew DiGeronimo | Made with ❤️ in NJ</p>
+        <p>&copy; Andrew DiGeronimo</p>
         <div class="social-links">
         <a href="https://github.com/AndrewDiGeronimo" target="_blank" alt="github">
             <i class="bi bi-github"></i>
