--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </header>
 <div class = "main_content">
     <h1>Hey there!</h1>
-    <h2>Still working out the details, here's some filler text to fill the page...</h2>
+    <h2>My name is Andrew DiGeronimo, welcome to my website!</h2>
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit et nostrum, saepe accusantium eos earum quibusdam asperiores minus voluptas aut est facere numquam nemo voluptate accusamus repellendus corrupti sunt officiis.
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi in neque sit eos dolorem iste repellendus mollitia enim, pariatur consectetur molestias laboriosam error vitae quidem veniam officia laborum ratione modi.
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magnam sunt nesciunt delectus molestiae at cupiditate iusto unde, quae commodi a debitis ad perferendis ratione numquam dolores. Nihil, eveniet praesentium?
