Content Updates / Website expansion

--- a/resume.html
+++ b/resume.html
@@ -21,20 +21,16 @@
             <div class="name"><a href="#home">Andrew DiGeronimo</a></div>
         </div>
         <div class="nav-links">
-            <a href="index.html" class="current-page">Home</a>
-            <a href="resume.html">Resume</a>
+            <a href="index.html">Home</a>
+            <a href="resume.html" class="current-page">Resume</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </div>
     </div>
 </header>
 <div class = "main_content">
-    <h1>Hey there!</h1>
-    <h2>My name is Andrew DiGeronimo, welcome to my website!</h2>
-    <body>
-        I am a recent graduate from Fairleigh Dickinson University with a masters in computer science.
-        
-    </body>
+    <h1>My Resume</h1>
+    <h2>Webpage in development... check back soon!</h2>
 <footer>
     <button id="darkModeToggle" class="btn-dark-mode">
         <i id="darkModeIcon" class="bi bi-moon"></i>
