Content and style changes

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rethink+Sans">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css" rel="stylesheet">
-    <title>Andrew DiGeronimo - Resume</title>
+    <title>Andrew DiGeronimo - Contact</title>
 </head>
 <body>
 <header>
@@ -28,14 +28,14 @@
         </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="resume.html" class="current-page">Resume</a>
+            <a href="resume.html">Resume</a>
             <a href="projects.html">Projects</a>
-            <a href="contact.html">Contact</a>
+            <a href="contact.html" class="current-page">Contact</a>
         </div>
     </div>
 </header>
 <div class = "main_content">
-    <h1>My Resume</h1>
+    <h1>Contact</h1>
     <h2>Webpage in development... check back soon!</h2>
 <footer>
     <button id="darkModeToggle" class="btn-dark-mode">
