--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        (function() {
+            const savedTheme = localStorage.getItem('theme') || (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
+            document.body.setAttribute('data-theme', savedTheme);
+        })();
+    </script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rethink+Sans">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css" rel="stylesheet">
@@ -18,13 +24,13 @@
                 <span></span>
                 <span></span>
             </div>
-            <div class="name"><a href="#home">Andrew DiGeronimo</a></div>
+            <div class="name"><a href="index.html">Andrew DiGeronimo</a></div>
         </div>
         <div class="nav-links">
             <a href="index.html" class="current-page">Home</a>
             <a href="resume.html">Resume</a>
-            <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
+            <a href="projects.html">Projects</a>
+            <a href="contact.html">Contact</a>
         </div>
     </div>
 </header>
@@ -32,8 +38,13 @@
     <h1>Hey there!</h1>
     <h2>My name is Andrew DiGeronimo, welcome to my website!</h2>
     <body>
-        I am a recent graduate from Fairleigh Dickinson University with a masters in computer science.
-        
+            <div class="content-grid">
+                <div class="portrait"><img src="Media/profile-pic.jpg" alt="Andrew DiGeronimo"></div>
+                <div class="text-content">
+                <p>I am a recent graduate from Fairleigh Dickinson University with a Masters in computer science.</p>
+                </div>
+            </div>
+            <p> Feel free to explore my website.</p>
     </body>
 <footer>
     <button id="darkModeToggle" class="btn-dark-mode">
