Content and Styling updates

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h1>Hey there!</h1>
     <h2>My name is Andrew DiGeronimo, welcome to my website!</h2>
     <body>
-            <div class="content-grid">
+            <div class="index-content-grid">
                 <div class="portrait"><img src="Media/profile-pic.jpg" alt="Andrew DiGeronimo"></div>
                 <div class="text-content">
                 <p>I am a recent graduate from Fairleigh Dickinson University with a Masters in computer science.</p>
@@ -40,6 +40,7 @@
             </div>
             <p> Feel free to explore my website.</p>
     </body>
+</div>
 <footer>
     <button id="darkModeToggle" class="btn-dark-mode">
         <i id="darkModeIcon" class="bi bi-moon"></i>
