--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,12 @@
 </header>
 <div class = "main_content">
     <h1>My Resume</h1>
-    <h2>Webpage in development... check back soon!</h2>
+    <h3> <a href="Media/Resume-AndrewDiGeronimo.pdf" target="_blank" class="download-link">Link to download the full resume here!</a></h3>
+    <h2 class="resume-subheading">Education</h2>
+    <div class="education-timeline"></div>
+    <h2 class="resume-subheading">Experience</h2>
+    <h2 class="resume-subheading">Skills</h2>
+</div>
 <footer>
     <button id="darkModeToggle" class="btn-dark-mode">
         <i id="darkModeIcon" class="bi bi-moon"></i>
