--- a/contact.html
+++ b/contact.html
@@ -24,17 +24,14 @@
             <a href="index.html">Home</a>
             <a href="resume.html">Resume</a>
             <a href="projects.html">Projects</a>
-            <a href="contact.html" class="current-page">Contact</a>
+            <a href="contact.html" class="current-page contact">Contact</a>
         </div>
     </div>
 </header>
-<div class = "main_content">
+<div class = "main-content">
     <h1>Contact</h1>
     <h2>Webpage in development... check back soon!</h2>
 <footer>
-    <button id="darkModeToggle" class="btn-dark-mode">
-        <i id="darkModeIcon" class="bi bi-moon"></i>
-    </button>
         <p>&copy; Andrew DiGeronimo</p>
         <div class="social-links">
         <a href="https://github.com/AndrewDiGeronimo" target="_blank" alt="github">
@@ -44,6 +41,10 @@
             <i class="bi bi-linkedin"></i>
         </a>
     </div>
+        <!-- Dark Mode Toggle Button -->
+        <button id="darkModeToggle" class="btn-dark-mode">
+            <i id="darkModeIcon" class="bi bi-moon"></i>
+        </button>
 </footer>
 </body>
 <script>
