--- a/index.html
+++ b/index.html
@@ -21,30 +21,29 @@
             <div class="name"><a href="index.html">Andrew DiGeronimo</a></div>
         </div>
         <div class="nav-links">
-            <a href="index.html" class="current-page">Home</a>
+            <a href="index.html" class="current-page home">Home</a>
             <a href="resume.html">Resume</a>
             <a href="projects.html">Projects</a>
             <a href="contact.html">Contact</a>
         </div>
     </div>
 </header>
-<div class = "main_content">
-    <h1>Hey there!</h1>
-    <h2>My name is Andrew DiGeronimo, welcome to my website!</h2>
-    <body>
-            <div class="index-content-grid">
-                <div class="portrait"><img src="Media/profile-pic.jpg" alt="Andrew DiGeronimo"></div>
-                <div class="text-content">
-                <p>I am a recent graduate from Fairleigh Dickinson University with a Masters in computer science.</p>
+<div class = "main-content">
+    <div class = "index-content-styling">
+        <h1>Hey there!</h1>
+        <h2>My name is Andrew DiGeronimo, welcome to my website!</h2>
+        <body>
+                <div class="index-content-grid">
+                    <div class="portrait"><img src="Media/profile-pic.jpg" alt="Andrew DiGeronimo"></div>
+                    <div class="text-content">
+                    <p>I am a recent graduate from Fairleigh Dickinson University with a Masters in computer science.</p>
+                    </div>
                 </div>
-            </div>
-            <p> Feel free to explore my website.</p>
-    </body>
+                <p> Feel free to explore my website.</p>
+        </body>
+    </div>
 </div>
 <footer>
-    <button id="darkModeToggle" class="btn-dark-mode">
-        <i id="darkModeIcon" class="bi bi-moon"></i>
-    </button>
         <p>&copy; Andrew DiGeronimo</p>
         <div class="social-links">
         <a href="https://github.com/AndrewDiGeronimo" target="_blank" alt="github">
@@ -54,6 +53,10 @@
             <i class="bi bi-linkedin"></i>
         </a>
     </div>
+        <!-- Dark Mode Toggle Button -->
+        <button id="darkModeToggle" class="btn-dark-mode">
+            <i id="darkModeIcon" class="bi bi-moon"></i>
+        </button>
 </footer>
 </body>
 <script>
