--- a/resume.html
+++ b/resume.html
@@ -22,24 +22,26 @@
         </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="resume.html" class="current-page">Resume</a>
+            <a href="resume.html" class="current-page resume">Resume</a>
             <a href="projects.html">Projects</a>
             <a href="contact.html">Contact</a>
         </div>
     </div>
 </header>
-<div class = "main_content">
+<div class = "main-content">
     <h1>My Resume</h1>
     <h3> <a href="Media/Resume-AndrewDiGeronimo.pdf" target="_blank" class="download-link">Link to download the full resume here!</a></h3>
     <h2 class="resume-subheading">Education</h2>
-    <div class="education-timeline"></div>
+    <ul>
+        <h3>Fairleigh Dickinson University, Teaneck, New Jersey</h3>
+        <li>Master's Degree, Computer Science May 2023</li>
+        <li>Bachelor's Degree, Computer Science May 2022</li>
+    </ul>
+    <span class="education-timeline"></span>
     <h2 class="resume-subheading">Experience</h2>
     <h2 class="resume-subheading">Skills</h2>
 </div>
 <footer>
-    <button id="darkModeToggle" class="btn-dark-mode">
-        <i id="darkModeIcon" class="bi bi-moon"></i>
-    </button>
         <p>&copy; Andrew DiGeronimo</p>
         <div class="social-links">
         <a href="https://github.com/AndrewDiGeronimo" target="_blank" alt="github">
@@ -49,6 +51,10 @@
             <i class="bi bi-linkedin"></i>
         </a>
     </div>
+        <!-- Dark Mode Toggle Button -->
+        <button id="darkModeToggle" class="btn-dark-mode">
+            <i id="darkModeIcon" class="bi bi-moon"></i>
+        </button>
 </footer>
 </body>
 <script>
