Resume content and style updates

--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,7 @@
 <div class = "main-content">
     <h1>My Projects</h1>
     <h2>Webpage in development... check back soon!</h2>
+</div>
 <footer>
         <p>&copy; Andrew DiGeronimo</p>
         <div class="social-links">
