--- a/resume.html
+++ b/resume.html
@@ -30,16 +30,71 @@
 </header>
 <div class = "main-content">
     <h1>My Resume</h1>
-    <h3> <a href="Media/Resume-AndrewDiGeronimo.pdf" target="_blank" class="download-link">Link to download the full resume here!</a></h3>
-    <h2 class="resume-subheading">Education</h2>
-    <ul>
-        <h3>Fairleigh Dickinson University, Teaneck, New Jersey</h3>
-        <li>Master's Degree, Computer Science May 2023</li>
-        <li>Bachelor's Degree, Computer Science May 2022</li>
-    </ul>
-    <span class="education-timeline"></span>
-    <h2 class="resume-subheading">Experience</h2>
-    <h2 class="resume-subheading">Skills</h2>
+    <h3> <a href="Media/Resume-AndrewDiGeronimo.pdf" target="_blank" class="download-link">Link to download the full resume here</a></h3>
+
+    <div class="timeline-container">
+        <h2>Experience</h2>
+        <!-- Timeline Item 1 -->
+        <div class="timeline-item">
+            <div class="timeline present">
+                <p class="date end-date present">Present</p>
+                <p class="date start-date">Apr 2023</p>
+            </div>
+            <div class="experience">
+                <h3>Apple Inc.</h3>
+                <h4>Technical Specialist</h4>
+                <p>East Rutherford, NJ</p>
+                <ul>
+                    <li>Deliver top-notch technical support to customers, leveraging expertise in Apple
+                        products and services to resolve a wide range of hardware and software issues
+                        efficiently.</li>
+                    <li> Demonstrate exceptional problem-solving skills by diagnosing and troubleshooting
+                        complex technical issues, resulting in increased customer satisfaction and loyalty.</li>
+                    <li>Collaborate with cross-functional teams, including sales specialists and Genius Bar
+                        technicians, to ensure a seamless and holistic customer experience.</li>
+                    <li>Manage customer appointments and walk-ins efficiently, ensuring timely service and
+                        effective prioritization of tasks in a fast-paced retail setting.</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Timeline Item 2 -->
+        <div class="timeline-item">
+            <div class="timeline">
+
+                <p class="date start-date">Dec 2022</p>
+            </div>
+            <div class="experience">
+                <h4>Specialist</h4>
+                <p>East Rutherford, NJ</p>
+                <ul>
+                    <li>Warmly greeted and engaged customers, promptly addressing their inquiries and
+                        requirements to ensure a seamless and positive experience.</li>
+                    <li>Delivered personalized solutions for both individual customers and businesses,
+                        aligning with their unique needs and preferences.</li>
+                    <li>Provided comprehensive expertise in product features and software capabilities,
+                        allowing for well-informed guidance and support.</li>
+                    <li>Conducted interactive product demonstrations, highlighting key features and
+                        addressing customer inquiries, resulting in a deeper understanding of product
+                        offerings and driving informed purchasing decisions.</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Timeline Item 3 -->
+        <div class="timeline-item">
+            <div class="timeline">
+
+                <p class="date start-date">Sep 2021</p>
+            </div>
+            <div class="experience">
+                <h4>Specialist</h4>
+                <p>Paramus, NJ</p>
+                <ul>
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
 <footer>
         <p>&copy; Andrew DiGeronimo</p>
