--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rethink+Sans">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.0/font/bootstrap-icons.min.css" rel="stylesheet">
     <title>Andrew DiGeronimo - Resume</title>
 </head>
 <body>
@@ -41,7 +41,7 @@
                 <p class="date start-date">Apr 2023</p>
             </div>
             <div class="experience">
-                <h3>Apple Inc.</h3>
+                <h3> <i class="bi bi-apple"> </i>Apple Inc.</h3>
                 <h4>Technical Specialist</h4>
                 <p>East Rutherford, NJ</p>
                 <ul>
