Styling and content additions

--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,16 @@
 </header>
 <div class = "main-content">
     <h1>My Resume</h1>
-    <h3> <a href="Media/Resume-AndrewDiGeronimo.pdf" target="_blank" class="download-link">Link to download the full resume here</a></h3>
+    <h3> <a href="Media/Resume-AndrewDiGeronimo.pdf" target="_blank" class="download-button">Download full resume</a></h3>
+
+    <h2 class="education-heading">Education</h2>
+    <h3 class="education-subheading">Fairleigh Dickinson Univeristy</h3>
+    <h4 class="education-details">Metropolitan campus</h4>
+    <p class="education-details">Teaneck, NJ</p>
+    <ul class="graduation-date"></ul>
+        <li>May 2023 Master's Degree, Computer Science</li>
+        <li>May 2022 Bachelor's Degree, Computer Science</li>
+    </ul>
 
     <div class="timeline-container">
         <h2>Experience</h2>
@@ -95,6 +104,9 @@
             </div>
         </div>
     </div>
+    <h2>Skills</h2>
+    <p>Languages I've worked with:</p>
+    <p>Java, Python, C++, HTML/CSS, Javascript</p>
 </div>
 <footer>
         <p>&copy; Andrew DiGeronimo</p>
