Resume content updates

--- a/resume.html
+++ b/resume.html
@@ -36,9 +36,10 @@
     <h3 class="education-subheading">Fairleigh Dickinson Univeristy</h3>
     <h4 class="education-details">Metropolitan campus</h4>
     <p class="education-details">Teaneck, NJ</p>
-    <ul class="graduation-date"></ul>
-        <li>May 2023 Master's Degree, Computer Science</li>
-        <li>May 2022 Bachelor's Degree, Computer Science</li>
+    <p class="graduation-date">May 2023</p>
+        <p class="graduation-degree">Master of Science - MS, Computer Science</p>
+    <p class="graduation-date">May 2022</p>
+        <p class="graduation-degree">Bachelor of Science - BS, Computer Science</p>
     </ul>
 
     <div class="timeline-container">
