Public Release - Content and style updates

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,13 @@
 </header>
 <div class = "main-content">
     <h1>Contact</h1>
-    <h2>Webpage in development... check back soon!</h2>
+    <h3>Send me an email: contact@andrewdigeronimo.com</h3>
+    <button class="copy-button" id="copy-button"><i class="bi bi-clipboard"></i> Copy Email </button>
+    <button class="mail-button" id="mail-button"><i class="bi bi-envelope-fill"></i> Send Email</button>
+    <h3>Connect with me on LinkedIn</h3>
+    <a href="https://www.linkedin.com/in/andrew-digeronimo-44b6b8181/" target="_blank" alt="LinkedIn">
+        <i class="bi bi-linkedin"></i>
+    </a>
 </div>
 <footer>
         <p>&copy; Andrew DiGeronimo</p>
