--- a/resume.html
+++ b/resume.html
@@ -44,6 +44,7 @@
 
     <div class="timeline-container">
         <h2>Experience</h2>
+
         <!-- Timeline Item 1 -->
         <div class="timeline-item">
             <div class="timeline present">
@@ -107,7 +108,7 @@
     </div>
     <h2>Skills</h2>
     <p>Languages I've worked with:</p>
-    <p>Java, Python, C++, HTML/CSS, Javascript</p>
+    <p>Java, Python, C++, HTML/CSS, JavaScript</p>
 </div>
 <footer>
         <p>&copy; Andrew DiGeronimo</p>
