--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,31 @@
 </header>
 <div class = "main-content">
     <h1>My Projects</h1>
-    <h2>Webpage in development... check back soon!</h2>
+    <div class="project-container">
+        <div class="project-year"> 2024 </div>
+
+        <div class="project-item">
+            <div class="project-title">Portfolio Website</div>
+            <div class="project-languages"><span class="lang-html">HTML</span>, <span class="lang-css">CSS</span>, <span class="lang-js">JavaScript</span></div>
+            <div class="project-repo"><a href="https://github.com/AndrewDiGeronimo/website">https://github.com/AndrewDiGeronimo/website</a></div>
+            <div class="project-description">
+                <ul>
+                    <li>This year marked the launch of my portfolio website, a significant step in my ongoing journey of development.</li>
+
+                    <li>
+                        In this project, my primary focus was on the site's User Experience (UX) and User Interface (UI), 
+                        paying close attention to minor details and consistently testing them to perfect the usability. 
+                        I emphasized the importance of interactive elements like hover effects and fade transitions, 
+                        ensuring each component responded effectively while maintaining overall usability.</li>
+
+                    <li>While this isn't the prettiest website ever made, I am proud to call it my own. I will continue to
+                        iterate on its design as I progress <span class="bi bi-emoji-smile"></span>.</li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+    <h4>More projects to be added...</h4>
 </div>
 <footer>
         <p>&copy; Andrew DiGeronimo</p>
