project contents added

--- a/projects.html
+++ b/projects.html
@@ -31,28 +31,120 @@
 <div class = "main-content">
     <h1>My Projects</h1>
     <div class="project-container">
+        <!-- Project Item 1 -->
         <div class="project-year"> 2024 </div>
-
         <div class="project-item">
-            <div class="project-title">Portfolio Website</div>
-            <div class="project-languages"><span class="lang-html">HTML</span>, <span class="lang-css">CSS</span>, <span class="lang-js">JavaScript</span></div>
-            <div class="project-repo"><a href="https://github.com/AndrewDiGeronimo/website">https://github.com/AndrewDiGeronimo/website</a></div>
-            <div class="project-description">
-                <ul>
-                    <li>This year marked the launch of my portfolio website, a significant step in my ongoing journey of development.</li>
+            <div class="project-content">
+                <div class="project-title">Portfolio Website</div>
+                <div class="project-skills">
+                    <span class="skill html">HTML</span>
+                    <span class="skill css">CSS</span>
+                    <span class="skill js">JavaScript</span>
+                </div>
+                <div class="project-repo"><a href="https://github.com/AndrewDiGeronimo/website" target="_blank">https://github.com/AndrewDiGeronimo/website</a></div>
+                <div class="project-description">
+                    <ul>
+                        <li>This year marked the launch of my portfolio website, a significant step in my ongoing journey of development.</li>
 
-                    <li>
+                        <li>
                         In this project, my primary focus was on the site's User Experience (UX) and User Interface (UI), 
                         paying close attention to minor details and consistently testing them to perfect the usability. 
                         I emphasized the importance of interactive elements like hover effects and fade transitions, 
-                        ensuring each component responded effectively while maintaining overall usability.</li>
+                        ensuring each component responded effectively while maintaining overall usability.
+                        </li>
 
-                    <li>While this isn't the prettiest website ever made, I am proud to call it my own. I will continue to
-                        iterate on its design as I progress <span class="bi bi-emoji-smile"></span>.</li>
-                </ul>
+                        <li>While this isn't the prettiest website ever made, I am proud to call it my own. I will continue to
+                        iterate on its design as I progress <span class="bi bi-emoji-smile"></span>.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        <div class="project-image">
+            <img src="/Media/website.png" alt="Project Image">
+        </div>
+        </div>
+        <!-- Project Item 2 -->
+        <div class="project-year"> 2023 </div>
+        <div class="project-item">
+            <div class="project-content">
+                <div class="project-title">SQLI Detection using AI</div>
+                <div class="project-skills">
+                    <span class="skill python">Python</span>
+                    <span class="skill">API</span>
+                </div>
+                <div class="project-repo"><a href="https://github.com/AndrewDiGeronimo/sqliOpenAPI" target="_blank">https://github.com/AndrewDiGeronimo/sqliOpenAPI</a></div>
+                <div class="project-description">
+                    <ul>
+                        <li> The objective was to develop a system utilizing the OpenAI API for identifying threats listed in the OWASP Top 10, 
+                            and I selected SQL Injection for this purpose.
+                        </li>
+
+                        <li> Utilizes artificial intelligence to analyze and identify potential threats in a web server's access logs.
+
+                        </li>
+
+                        <li> Generates a security report detailing the total count of logs reviewed, along with a breakdown of normal activities 
+                            and potential indications of SQL Injection attempts.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="project-image">
+                <img src="/Media/sqliOpenAI.png" alt="Project Image">
             </div>
         </div>
 
+        <div class="project-year"> 2022 </div>
+        <!-- Project Item 3 -->
+        <div class="project-item">
+            <div class="project-content">
+                <div class="project-title">Flappy Bird C++</div>
+                <div class="project-skills">
+                    <span class="skill cPlus">C++</span>
+                    <span class="skill">GameDev</span>
+                </div>
+                <div class="project-repo"><a href="https://github.com/AndrewDiGeronimo/FlappyBirdCPP" target="_blank">https://github.com/AndrewDiGeronimo/FlappyBirdCPP</a></div>
+                <div class="project-description">
+                    <ul>
+                        <li>Using DirectX Toolkit, I recreated the historic Flappy Bird mobile game using C++.</li>
+
+                        <li>Developed the game's mechanics, including implementing gravity effects on the bird, the continuous generation of pipes, 
+                            and the game-over scenario integrated with a high-score tracking system.
+                        </li>
+
+                        <li><a href="https://github.com/samuelcust/flappy-bird-assets" target="_blank">Visual Assets: <span class="underline">github.com/samuelcust/flappy-bird-assets</span></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="project-image">
+                <img src="/Media/FlappyCPP.png" alt="Project Image">
+            </div>
+        </div>
+        <!-- Project Item 4 -->
+        <div class="project-item">
+            <div class="project-content">
+                <div class="project-title">Hospital Management System</div>
+                <div class="project-skills">
+                    <span class="skill html">HTML</span>
+                    <span class="skill css">CSS</span>
+                    <span class="skill sql">SQL</span>
+                    <span class="skill">PHP</span>
+                </div>
+                <div class="project-repo"><a href="https://github.com/AndrewDiGeronimo/sqliOpenAPI" target="_blank">https://github.com/AndrewDiGeronimo/sqliOpenAPI</a></div>
+                <div class="project-description">
+                    <ul>
+                        <li>For my database management course, I lead a group project to create a university-themed patient management system.</li>
+
+                        <li>The web application contains a fully featured login system, as well as multiple tables to manage patients and their 
+                            medical records, doctors, and hospital branches. All tables can be modified using the front end interface utilizing 
+                            PHP requests.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="project-image">
+                <img src="/Media/HospitalManagementSystem.png" alt="Project Image">
+            </div>
+        </div>
     </div>
     <h4>More projects to be added...</h4>
 </div>
